front na wiekszosci rzeczy, nie ma wyswietlania kategorii oraz brak galerii zdjeci

--- a/Pages/Categories/AddCategory.cshtml
+++ b/Pages/Categories/AddCategory.cshtml
@@ -2,7 +2,7 @@
 @model PrzepisyWeb.Pages.Categories.AddCategoryModel
 
 @{
-    ViewData["Title"] = "AddCategory";
+    ViewData["Title"] = "Dodawanie kategorii - ";
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 <h3 style="padding: 20px 0 0 0"> Podaj kategorię, która chcesz dodać do przepisu</h3>
