--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,17 +6,15 @@
 
 <section>
     <article>
-        <h1>Zgłodniałeś?</h1>
+        <h1><b>Zgłodniałeś?</b></h1>
         <h2>To strona idealnie dla Ciebie!</h2>
         <p><img class="inherit" src="~/my_img/spaghetti-1932466_1920.jpg" alt="zdjecie-jedzonka"></p>
         <h3>Znajdziesz tutaj wiele przepisów i inspiracji kulinarnych.</h3>
         <img class="left" src="~/my_img/cook-1375797_1920.jpg" alt="zdjecie-ksiazki">
         <p style="margin-top: 30px">Posiadamy ogromną bazę przepisów z najróżniejszych kategorii, więc każdy znajdzie coś dla siebie. 
             Również Ty możesz nam pomóc, dodając swoje ulubione przepisy i dzieląc się nimi z innymi.</p>
-        <p style="0 0 40px 0">
-
-        </p>
-        <h4 style="40px 0 0 0">Nie czekaj! Dołącz już dziś do naszej małej kulinarnej rodzinki.</h4>
+      
+        <h4 style="40px 0 0 0"><em><b>Nie czekaj! Dołącz już dziś do naszej małej kulinarnej rodzinki.</b></em></h4>
 
     </article>
 </section>
