--- a/Pages/Categories/DeleteCategory.cshtml
+++ b/Pages/Categories/DeleteCategory.cshtml
@@ -2,28 +2,21 @@
 @model PrzepisyWeb.Pages.Categories.DeleteCategoryModel
 
 @{
-    ViewData["Title"] = "DeleteCategory";
+    ViewData["Title"] = "Usuwanie kategorii z przepisu - ";
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
-<h1>DeleteCategory</h1>
+<h3 style="padding: 20px 0 0 0">Czy na pewno chcesz usunąć podaną kategorię z przepisu?</h3>
+<h4>Kategoria</h4>
+<hr color="red" />
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Category</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Category.CategoryName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Category.CategoryName)
-        </dd>
-    </dl>
-    
+<div class="shadow-lg p-3 mb-5 bg-white rounded">
+    <p><b>Nazwa kategorii</b>  : @Html.DisplayFor(model => model.Category.CategoryName)</p>
     <form method="post">
         <input type="hidden" asp-for="Category.CategoryID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <input type="submit" value="Usuń" class="nav-link btn btn-outline-danger" style="margin: 0 0 10px 0" />
+        <div>
+            <a asp-page="./Index" class=" btn btn-outline-success">Wróć do listy kategorii</a>
+        </div>
     </form>
 </div>
