--- a/Pages/Identity/Pages/Account/Register.cshtml
+++ b/Pages/Identity/Pages/Account/Register.cshtml
@@ -9,7 +9,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>Stwórz nowego użytkownika.</h4>
+            <h4>Stwórz nowego użytkownika</h4>
             <hr color="red"/>
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
