Naprawa błędu w edycji, Ulepszenie karty

--- a/Pages/Recipies.cshtml
+++ b/Pages/Recipies.cshtml
@@ -32,16 +32,18 @@
             <form method="post">
 
                 <input type="hidden" name="Like" asp-for="@item.RecipeID" />
-                <input type="submit" name="Like" value="Like" />
+                <input type="submit" name="Like" value="Like" class="btn btn-success" />
             </form>
             @Html.DisplayFor(modelItem => item.LikeCounter)
             <form method="post">
 
                 <input type="hidden" name="Dislike" asp-for="@item.RecipeID" />
-                <input type="submit" name="Dislike" value="Dislike" />
+                <input type="submit" name="Dislike" value="Dislike" class="btn btn-danger" />
             </form>
 
-            <a asp-page="/Recipes/AddFavourite" asp-route-id="@item.RecipeID">Do ulubionych</a> |
+            <a asp-page="/Recipes/AddFavourite" asp-route-id="@item.RecipeID">Do ulubionych</a> 
+            <br />
+            Autor: <a asp-page="/Recipes/UserPage" asp-route-UserName="@item.OwnerUserName">@Html.DisplayFor(modelItem => item.OwnerUserName)</a>
 
             <div class="col-md-12 text-center">
                 <a href="/Recipes/Details?id=@item.RecipeID">Zobacz szczegóły przepisu.</a>
