--- a/Pages/Recipes/Edit.cshtml
+++ b/Pages/Recipes/Edit.cshtml
@@ -41,17 +41,17 @@
                 <span asp-validation-for="Recipe.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Recipe.Images" class="control-label">Zdjęcie 1</label>
+                <label asp-for="Recipe.ImagesGallery" class="control-label">Zdjęcie 1</label>
                 <input asp-for="Img_1" class="form-control" />
 
             </div>
             <div class="form-group">
-                <label asp-for="Recipe.Images" class="control-label">Zdjęcie 2</label>
+                <label asp-for="Recipe.ImagesGallery" class="control-label">Zdjęcie 2</label>
                 <input asp-for="Img_2" class="form-control" />
 
             </div>
             <div class="form-group">
-                <label asp-for="Recipe.Images" class="control-label">Zdjęcie 3</label>
+                <label asp-for="Recipe.ImagesGallery" class="control-label">Zdjęcie 3</label>
                 <input asp-for="Img_3" class="form-control" />
 
             </div>
