--- a/Pages/CategorySearch.cshtml
+++ b/Pages/CategorySearch.cshtml
@@ -1,36 +1,39 @@
 ﻿@page
-@model PrzepisyWeb.Pages.Recipes.FavouriteModel
+@model PrzepisyWeb.Pages.CategorySearchModel
 
 @{
-    ViewData["Title"] = "Ulubione - ";
+    ViewData["Title"] = "CategorySearch";
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
-<h1 style="padding: 20px 0 30px 0">Twoje ulubione przepisy</h1>
+<h1>CategorySearch</h1>
 
+<p>
+    <a asp-page="Create">Create New</a>
+</p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                Nazwa przepisu
+                @Html.DisplayNameFor(model => model.Recipe[0].Name)
             </th>
             <th>
-                Zdjęcia
+                @Html.DisplayNameFor(model => model.Recipe[0].Image)
             </th>
             <th>
-                Składniki
+                @Html.DisplayNameFor(model => model.Recipe[0].Ingredients)
             </th>
             <th>
-                Sposób przygotowania
+                @Html.DisplayNameFor(model => model.Recipe[0].Description)
             </th>
             <th>
-                Data dodania
+                @Html.DisplayNameFor(model => model.Recipe[0].Date)
             </th>
             <th>
-
+                @Html.DisplayNameFor(model => model.Recipe[0].OwnerUserName)
             </th>
             <th>
-                Nazwa użytkownika
+                @Html.DisplayNameFor(model => model.Recipe[0].LikeCounter)
             </th>
             <th></th>
         </tr>
@@ -54,14 +57,15 @@
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
-                <a asp-page="/Recipes/Details" asp-route-id="@item.RecipeID" class="btn btn-light">Szczegóły</a>
+                @Html.DisplayFor(modelItem => item.OwnerUserName)
             </td>
             <td>
-                <a asp-page="/Recipes/UserPage" asp-route-UserName="@item.OwnerUserName">@Html.DisplayFor(modelItem => item.OwnerUserName)</a>
+                @Html.DisplayFor(modelItem => item.LikeCounter)
             </td>
             <td>
-                <a asp-page="./DeleteFavourite" asp-route-id="@item.RecipeID" class="btn btn-outline-danger">Usuń z ulubionych</a>
-
+                <a asp-page="./Edit" asp-route-id="@item.RecipeID">Edit</a> |
+                <a asp-page="./Details" asp-route-id="@item.RecipeID">Details</a> |
+                <a asp-page="./Delete" asp-route-id="@item.RecipeID">Delete</a>
             </td>
         </tr>
 }
