--- a/Pages/Recipes/UserPage.cshtml
+++ b/Pages/Recipes/UserPage.cshtml
@@ -64,7 +64,7 @@
                     <input type="hidden" name="Like" asp-for="@item.RecipeID" />
                     <br /><input type="submit" name="Like" value="Lubię" class="btn btn-success" style="margin: 0 0 5px 0" />
 
-                    <input type="hidden" name="Like" asp-for="@item.RecipeID" />
+                    <input type="hidden" name="Dislike" asp-for="@item.RecipeID" />
                     <br /><input type="submit" name="Dislike" value="Nie lubię" class="btn btn-danger" style="margin: 0 0 5px 0" />
                 </form>
                 <a asp-page="./AddFavourite" asp-route-id="@item.RecipeID" class="btn btn-light">Dodaj do ulubionych</a>
