--- a/Pages/CategorySearch.cshtml
+++ b/Pages/CategorySearch.cshtml
@@ -6,68 +6,54 @@
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
-<h1>CategorySearch</h1>
+
+<h1 style="padding: 20px 0 30px 0">Lista przepisów</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="/Recipes/Create" id="go" type="submit" class="nav-link btn btn-outline-warning">Dodaj nowy przepis</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Recipe[0].Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Recipe[0].Image)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Recipe[0].Ingredients)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Recipe[0].Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Recipe[0].Date)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Recipe[0].OwnerUserName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Recipe[0].LikeCounter)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.Recipe) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Image)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Ingredients)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OwnerUserName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LikeCounter)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.RecipeID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.RecipeID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.RecipeID">Delete</a>
-            </td>
-        </tr>
+
+<h3>Zmień metodę na <a asp-page="./Recipies" class=" btn btn-info">Szukaj Tytułu/Autora</a> </h3>
+
+<form method="post">
+    <div class="form-group justify-content-center">
+        <label id="search_1" style="margin: 10px 0 5px 0; font-size: 18px" asp-for="SearchCategegoryRecipe"><b>Wyszukiwarka</b></label>
+        <input type="text" class="form-control" id="search_1" asp-for="SearchString" placeholder="Podaj kategorie.." />
+        <small id="search_1" class="form-text text-muted">Maksymalnie 50 znaków</small>
+        <span asp-validation-for="SearchCategegoryRecipe" class="text-danger"></span>
+    </div>
+    <div class="justify-content-center align-content-center">
+        <input type="submit" name="Search" value="Szukaj" class="btn btn-outline-info" style="margin: 0 0 50px 0" />
+    </div>
+</form>
+
+
+@foreach (var item in Model.SearchCategegoryRecipe)
+{
+    <div class="card">
+        <h3 style="text-align:center" class="card-title">@item.Name</h3>
+        <img class="card-img-top" src="@item.Image">
+        <div class="card-body">
+            <p style="text-align:center" class="card-text">@item.Description</p>
+            <form method="post">
+
+                <input type="hidden" name="Like" asp-for="@item.RecipeID" />
+                <input type="submit" name="Like" value="Like" class="btn btn-success" />
+            </form>
+            @Html.DisplayFor(modelItem => item.LikeCounter)
+            <form method="post">
+
+                <input type="hidden" name="Dislike" asp-for="@item.RecipeID" />
+                <input type="submit" name="Dislike" value="Dislike" class="btn btn-danger" />
+            </form>
+
+            <a asp-page="/Recipes/AddFavourite" asp-route-id="@item.RecipeID">Do ulubionych</a>
+            <br />
+            Autor: <a asp-page="/Recipes/UserPage" asp-route-UserName="@item.OwnerUserName">@Html.DisplayFor(modelItem => item.OwnerUserName)</a>
+
+            <div class="col-md-12 text-center">
+                <a href="/Recipes/Details?id=@item.RecipeID">Zobacz szczegóły przepisu.</a>
+            </div>
+        </div>
+    </div>
 }
-    </tbody>
-</table>
