--- a/Pages/Recipes/UserPage.cshtml
+++ b/Pages/Recipes/UserPage.cshtml
@@ -63,7 +63,8 @@
 
                     <input type="hidden" name="Like" asp-for="@item.RecipeID" />
                     <br /><input type="submit" name="Like" value="Lubię" class="btn btn-success" style="margin: 0 0 5px 0" />
-
+                    </form>
+                    <form method="post">
                     <input type="hidden" name="Dislike" asp-for="@item.RecipeID" />
                     <br /><input type="submit" name="Dislike" value="Nie lubię" class="btn btn-danger" style="margin: 0 0 5px 0" />
                 </form>
