--- a/Pages/Recipes/Create.cshtml
+++ b/Pages/Recipes/Create.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Recipe.Image" class="control-label">Prześlij zdjęcia</label>
-                <!--input asp-for="Recipe.Image" class="form-control" /-->
+                <input asp-for="Recipe.Image" class="form-control" />
                 <span asp-validation-for="Recipe.Image" class="text-danger"></span>
             </div>
             <div class="form-group">
