--- a/Pages/Recipes/Details.cshtml
+++ b/Pages/Recipes/Details.cshtml
@@ -15,7 +15,7 @@
     <input type="hidden" asp-for="Recipe.RecipeID" />
 
     <p><b>Nazwa przepisu</b> : @Html.DisplayFor(model => model.Recipe.Name)</p>
-    <p><b>Zdjęcia</b> : @Html.DisplayFor(model => model.Recipe.Image)</p>
+     <img src="@Html.DisplayFor(model =>model.Recipe.Image)" style="text-align: center;" />
     <p><b>Składniki</b> : @Html.DisplayFor(model => model.Recipe.Ingredients)</p>
     <p><b>Sposób przygotowania</b> : @Html.DisplayFor(model => model.Recipe.Description)</p>
     <p><b>Data dodania</b> : @Html.DisplayFor(model => model.Recipe.Date)</p>
